# shippy-gui

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE_FEEDBACK.md  IMPLEMENTATION_PLAN.md  PLAN.md  PRINTER_IMPROVEMENTS_PLAN.md  README.md  config.example.ini  config.ini  pyproject.toml
scripts/: diagnose_printers.py
shippy_gui/core/: misc.py  models.py
src/shippy_gui/: __init__.py  __main__.py  config.example.ini  main_window.py  settings_dialog.py  shipping_coordinators.py  shipping_tab.py
src/shippy_gui/core/: __init__.py  addresses.py  config.py  config_manager.py  constants.py  font.py  logging.py  models.py  server.py  services.py  shipment_workflow.py  shipping.py
src/shippy_gui/printing/: __init__.py  models.py  printer_manager.py  printer_service.py
src/shippy_gui/printing/backends/: __init__.py  base.py  linux.py  null.py  windows.py
src/shippy_gui/scripts/: diagnose_printers.py
src/shippy_gui/tabs/: bulk_tab.py  individual_tab.py  manual_tab.py  shipping_tab.py
src/shippy_gui/widgets/: __init__.py  address_form.py  autocomplete.py  selection_dialog.py  shipment_controls.py
src/shippy_gui/workers/: __init__.py  shipment_worker.py
tests/: test_addresses.py  test_config_helpers.py  test_main_window.py  test_printer_service.py  test_services.py  test_shipment_controls.py  test_shipment_workflow.py  test_shipping_coordinators.py  test_windows_printers.py
