[project]
name = "shippy-gui"
version = "0.1.0"
description = "GUI application for IBP shipping label generation using PySide6"
readme = "README.md"
authors = [
    { name = "Jonathan Starr", email = "github@jstarr.me" }
]
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8.0",
    "easypost>=10.3.0",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "googlemaps>=4.10.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
windows = [
    "pywin32>=310",
    "WMI>=1.5.1",
]
linux = [
    "pycups>=2.0.4",
]

[project.scripts]
diagnose-printers = "shippy_gui.scripts.diagnose_printers:main"

[project.gui-scripts]
shippy-gui = "shippy_gui.__main__:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
